MODINV-1249 Set item's order to null for move and update ownership